--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,17 @@
 body {
   font: 10px sans-serif;
-  width: 100%;
-  height: 100%;
 }
 
-.title,
-.sub-title {
+#title,
+#sub-title {
   text-align: center;
 }
 
-.title {
+#title {
   font-size: 1.6rem;
 }
 
-.sub-title {
+#sub-title {
   font-size: 1.2rem;
 }
 
@@ -37,11 +35,14 @@ body {
 
 div.tooltip {
   position: absolute;
-
   padding: 10px;
   font: 12px sans-serif;
   background: lightsteelblue;
   border: 0px;
   border-radius: 8px;
   pointer-events: none;
+}
+
+.label {
+  color: #000;
 }
